--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.2.0",
     "@react-native-firebase/auth": "^8.2.0",
+    "@react-native-firebase/firestore": "^7.4.3",
     "@react-navigation/material-top-tabs": "^5.2.14",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-animated-splash-screen": "^2.0.4",
+    "react-native-file-picker": "^0.0.19",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
-    "react-native-tab-view": "^2.15.0"
+    "react-native-tab-view": "^2.15.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
