--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-firebase/app": "^8.2.0",
     "@react-native-firebase/auth": "^8.2.0",
     "@react-native-firebase/firestore": "^7.4.3",
+    "@react-native-firebase/messaging": "^7.4.2",
+    "@react-native-firebase/storage": "^7.2.2",
     "@react-navigation/material-top-tabs": "^5.2.14",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
