--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-animated-splash-screen": "^2.0.4",
     "react-native-file-picker": "^0.0.19",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.3",
     "react-native-maps": "0.27.1",
+    "react-native-permissions": "^2.1.5",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
