--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.2.0",
     "@react-native-firebase/auth": "^8.2.0",
+    "@react-native-firebase/database": "^7.3.2",
     "@react-native-firebase/firestore": "^7.4.3",
     "@react-native-firebase/messaging": "^7.4.2",
     "@react-native-firebase/storage": "^7.2.2",
     "@react-navigation/material-top-tabs": "^5.2.14",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "moment": "^2.27.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animated-splash-screen": "^2.0.4",
     "react-native-file-picker": "^0.0.19",
+    "react-native-geocoding": "^0.4.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^2.3.3",
     "react-native-maps": "0.27.1",
     "react-native-permissions": "^2.1.5",
