--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,9 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=Bgsilham140402
+MYAPP_UPLOAD_KEY_PASSWORD=Bgsilham140402
